<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/save_income_Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white" />

    <RadioGroup
        android:id="@+id/save_income_RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_income_Toolbar"
        android:checkedButton="@id/save_income_SalaryIncome">

        <RadioButton
            android:id="@+id/save_income_SalaryIncome"
            android:text="@string/salaryIncome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/color_radiobutton"
            android:gravity="center"
            android:background="@drawable/screen_radio"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <RadioButton
            android:id="@+id/save_income_StockIncome"
            android:text="@string/stockIncome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/color_radiobutton"
            android:button="@null"
            android:layout_marginRight="10dp"
            android:background="@drawable/screen_radio"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <RadioButton
            android:id="@+id/save_income_InterestIncome"
            android:text="@string/interestIncome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/color_radiobutton"
            android:button="@null"
            android:layout_marginRight="10dp"
            android:background="@drawable/screen_radio"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    </RadioGroup>

    <TextView
        android:id="@+id/save_income_MoneyTextView"
        android:text="@string/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/save_income_RadioGroup"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/save_income_Money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_income_MoneyTextView" />

    <TextView
        android:id="@+id/save_income_DateTextView"
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_income_Money"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/save_income_DateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onDateClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_income_DateTextView" />

    <Button
        android:id="@+id/save_income_SaveButton"
        android:text="@string/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:onClick="onSaveClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_income_DateButton"
        app:layout_constraintEnd_toStartOf="@+id/save_income_ClearButton" />

    <Button
        android:id="@+id/save_income_ClearButton"
        android:text="@string/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:onClick="onClearClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/save_income_SaveButton"
        app:layout_constraintTop_toBottomOf="@+id/save_income_DateButton" />
</androidx.constraintlayout.widget.ConstraintLayout>