<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    tools:context=".HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/home_Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white" />

    <TextView
        android:id="@+id/home_totalAssetsTextView"
        android:text="@string/assetstotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/home_Toolbar"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/home_totalAssets"
        android:text="totalAssets"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="14sp"
        android:autoSizeMaxTextSize="25sp"
        android:gravity="center"
        android:background="@drawable/textview"
        app:layout_constraintTop_toBottomOf="@id/home_totalAssetsTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/home_totalIncomeTextView"
        android:text="@string/incomeTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/home_totalAssets"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/home_totalIncome"
        android:text="totalIncome"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/textview"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="14sp"
        android:autoSizeMaxTextSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/home_totalExpenses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_totalIncomeTextView"
        app:layout_constraintBottom_toBottomOf="@+id/home_totalExpenses" />

    <TextView
        android:id="@+id/home_totalExpensesTextView"
        android:text="@string/expensesTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/home_totalAssets"
        app:layout_constraintLeft_toLeftOf="@id/home_totalExpenses"/>

    <TextView
        android:id="@+id/home_totalExpenses"
        android:text="totalExpenses"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/textview"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="14sp"
        android:autoSizeMaxTextSize="25sp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/home_totalIncome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_totalExpensesTextView" />

    <Button
        android:id="@+id/home_IncomeButton"
        android:text="@string/income"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/income_buttom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/home_ExpensesButton"
        app:layout_constraintTop_toBottomOf="@+id/home_totalIncome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/home_ExpensesButton"
        android:text="@string/expenses"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:layout_marginRight="10dp"
        android:background="@drawable/expenses_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/home_IncomeButton"
        app:layout_constraintTop_toBottomOf="@+id/home_totalExpenses"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
</androidx.constraintlayout.widget.ConstraintLayout>